--- a/web/default.conf
+++ b/web/default.conf
@@ -57,9 +57,9 @@ server {
     #    deny  all;
     #}
 
-    # location /api/catalogue/ {
-    #     proxy_pass http://${CATALOGUE_HOST}:8080/;
-    # }
+    location /api/catalogue/ {
+        proxy_pass http://${CATALOGUE_HOST}:8080/;
+    }
 
     # location /api/user/ {
     #     proxy_pass http://${USER_HOST}:8080/;
